--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+#### joe made this: http://goel.io/joe
+#### scala ####
 *.class
 *.log
 
@@ -11,3 +13,51 @@ lib_managed/
 src_managed/
 project/boot/
 project/plugins/project/
+
+# Scala-IDE specific
+.scala_dependencies
+.worksheet
+#### osx ####
+*.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+#### sbt ####
+# Simple Build Tool
+# http://www.scala-sbt.org/release/docs/Getting-Started/Directories.html#configuring-version-control
+
+target/
+lib_managed/
+src_managed/
+project/boot/
+.history
+.cache
+
+*.iml
+*.ipr
+*.iws
+.idea
+out
+
